# bua

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  build.sh  build.zig
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/: runtime_bench.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: capabilities.rs  error.rs  lib.rs  trace.rs  types.rs
docs/: ARCHITECTURE.md
examples/: autonomous_research.ts  capability_sandbox.ts  deterministic_replay.ts  hello_agent.ts  multi_agent.ts  snapshot_restore.ts  tool_calling.ts
jsc/bindings/: Cargo.toml  bua_jsc_sys.rs
jsc/include/: bua_jsc.h
jsc/src/: bua_jsc.cpp
npm/pkg/: README.md  package.json
npm/pkg/scripts/: install.js
npm/scripts/: build.js
runtime/: Cargo.toml  build.rs
runtime/src/: agent.rs  engine.rs  event_loop.rs  jsc_sys.rs  lib.rs  loader.rs  permissions.rs  scheduler.rs  snapshot.rs  tools.rs  transpiler.rs
runtime/src/deterministic/: clock.rs  interceptor.rs  mod.rs  replay.rs
runtime/src/ffi/: context.rs  engine.rs  mod.rs  value.rs
runtime/src/globals/: injector.rs  mod.rs
runtime/src/metrics/: mod.rs
runtime/src/modules/: builtins.rs  graph.rs  mod.rs  record.rs  resolver.rs
runtime/src/promise/: bridge.rs  future.rs  mod.rs  queue.rs
runtime/src/runtime/: agent_ctx.rs  capability_ctx.rs  mod.rs  runtime.rs  snapshot_ctx.rs  tool_ctx.rs  trace_ctx.rs  vm.rs
src/platform/: allocator.zig  clock.zig  root.zig
tests/integration/: capabilities_test.rs  e2e_agent_test.rs
