[workspace]
resolver = "2"
members = [
    "runtime",
    "cli",
    "core",
    "jsc/bindings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["imputer"]
license = "MIT"
rust-version = "1.78"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.6"
uuid = { version = "1.8", features = ["v4", "fast-rng", "serde"] }
rustc-hash = "1.1"
smallvec = "1.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
