[package]
name = "bua"
version.workspace = true
edition.workspace = true
default-run = "bua"

[[bin]]
name = "bua"
path = "src/main.rs"

[dependencies]
bua-core = { path = "../core" }
bua-runtime = { path = "../runtime" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
