[package]
name = "bua-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
uuid.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
bitflags = { version = "2.5", features = ["serde"] }
