[package]
name = "bua-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
bua-core = { path = "../core" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
uuid.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
bitflags = { version = "2.5", features = ["serde"] }
tempfile = "3.10"

# HTTP client for fetch() and bua_http_get tool
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Raw JSC bindings — included as a path source so build.rs can gate them
# bua_jsc_sys is re-exported through runtime/src/jsc_sys.rs
bua-jsc-sys = { path = "../jsc/bindings" }

[features]
# Enabled automatically by build.rs when JSC is detected

[build-dependencies]
cc = "1.0"
